--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,27 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/image_view_smiley"
+            android:layout_width="103dp"
+            android:layout_height="46dp"
+            android:layout_weight="1"
+            android:src="@drawable/smiley" />
+
+        <ProgressBar
+            android:id="@+id/progressBar_smiles"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:progressDrawable="@android:color/holo_green_light" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <TextView
             android:id="@+id/textView_currency_count2"
             android:layout_width="wrap_content"
@@ -49,7 +70,8 @@
         android:id="@+id/imageButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/vroom_car" />
+        android:src="@drawable/vroom_car"
+        tools:srcCompat="@drawable/vroom_car" />
 
     <Button
         android:id="@+id/button_design"
@@ -57,13 +79,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="0"
         android:text="Design" />
-
-    <Button
-        android:id="@+id/button_car"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:minHeight="100px" />
 
     <Button
         android:id="@+id/button_upgrade"
@@ -85,37 +100,36 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
+        <ImageButton
+            android:id="@+id/button_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:contentDescription="button_settings"
+            android:src="@drawable/settings_gear"
+            tools:srcCompat="@drawable/settings_gear" />
 
-    <ImageButton
-        android:id="@+id/button_settings"
-        android:layout_width="wrap_content"
-        android:layout_height="78dp"
-        android:layout_weight="1"
-        android:contentDescription="button_settings"
-        android:src="@drawable/settings_gear"
-        tools:srcCompat="@drawable/settings_gear" />
+        <Button
+            android:id="@+id/button_mode"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Mode" />
 
-    <Button
-        android:id="@+id/button_mode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
-
-    <Button
-        android:id="@+id/button_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Button" />
+        <Button
+            android:id="@+id/button_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="77dp"
+            android:layout_weight="1"
+            android:text="Profile" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/button"
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
