--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/cardview_dark_background"
     android:orientation="vertical">
 
     <LinearLayout
@@ -13,11 +13,11 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/image_view_smiley"
-            android:layout_width="103dp"
-            android:layout_height="46dp"
+            android:id="@+id/imageView"
+            android:layout_width="114dp"
+            android:layout_height="65dp"
             android:layout_weight="1"
-            android:src="@drawable/smiley" />
+            android:src="@drawable/gas_pump" />
 
         <ProgressBar
             android:id="@+id/progressBar_smiles"
@@ -58,6 +58,29 @@
             android:clickable="false"
             android:fontFamily="cursive"
             android:text="000000000"
+            android:textAlignment="viewStart"
+            android:textColor="#FFFFFF"
+            android:textSize="36sp"
+            android:textStyle="bold"
+            app:autoSizeTextType="uniform" />
+
+        <ImageView
+            android:id="@+id/image_view_smiley"
+            android:layout_width="13dp"
+            android:layout_height="46dp"
+            android:layout_weight="1"
+            android:src="@drawable/smiley" />
+
+        <TextView
+            android:id="@+id/textView_smiles"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight=".1"
+            android:height="50sp"
+            android:autoText="false"
+            android:clickable="false"
+            android:fontFamily="cursive"
+            android:text="000"
             android:textAlignment="viewStart"
             android:textColor="#FFFFFF"
             android:textSize="36sp"
@@ -128,8 +151,14 @@
     </LinearLayout>
 
     <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView_main_banner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+    </com.google.android.gms.ads.AdView>
 
 </LinearLayout>
